# sunk

./: Cargo.toml
src/: client.rs  error.rs  jukebox.rs  lib.rs  response.rs  search.rs  user.rs
src/collections/: album.rs  artist.rs  playlist.rs
src/media/: mod.rs  podcast.rs  radio.rs  song.rs  video.rs
