[package]
name = "sunk"
version = "0.1.2" # remember to update html_root_url
authors = ["xeals <xeals@pm.me>"]
description = "Rust bindings for the Subsonic music streaming API"
homepage = "https://github.com/xeals/sunk"
repository = "https://github.com/xeals/sunk"
documentation = "https://docs.rs/sunk/"
readme = "README.md"
keywords = ["subsonic", "airsonic", "music", "api", "webapi"]
categories = ["api-bindings"]
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
failure = "0.1.8"
log = "0.4.14"
md5 = "0.7.0"
rand = "0.8.3"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
reqwest = { version =  "0.10.10", features = [ "blocking", "json" ]}
url = "2.2.1"
