[package]
name = "sunk"
version = "0.2.0" # remember to update html_root_url
authors = ["Philippe Hürlimann <p@hurlimann.org>"]
description = "Rust bindings for the Subsonic music streaming API"
homepage = "https://github.com/p-h/sunk"
repository = "https://github.com/p-h/sunk"
readme = "README.md"
keywords = ["subsonic", "airsonic", "music", "api", "webapi"]
categories = ["api-bindings"]
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
log = "0.4.14"
md5 = "0.7.0"
rand = "0.8.3"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
reqwest = { version =  "0.10.10", features = [ "blocking", "json" ]}
url = "2.2.1"
thiserror = "1.0.24"
